--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <ul>
         <li><a href="#beranda">Beranda</a></li>
         <li><a href="#galeri">Galeri</a></li>
-        <li><a href="pages/tentang.html">Tentang</a></li>
+        <li><a href="pages/about.html">about</a></li>
         <li><a href="pages/kontak.html">Kontak</a></li>
       </ul>
     </nav>
