--- a/pages/tentang.html
+++ b/pages/tentang.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../css/style.css">
-  <title>About</title>
+  <title>Tentang</title>
 </head>
 <body>
   <h1>Tentang Situs Ini</h1>
