--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
+  <meta name="description" content="Tempat Baca Light Novel Gratis — koleksi rapi, update rutin.">
+<meta property="og:title" content="XIII — Light Novel Gratis">
+<meta property="og:description" content="Koleksi rapi, update rutin, tanpa ribet.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://vazar-xiii.github.io/belajar-html/">
+<meta property="og:image" content="https://vazar-xiii.github.io/belajar-html/img/foto1.png">
+<meta name="twitter:card" content="summary_large_image">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Beranda — XIII</title>
