--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="id">
 <head>
   <meta name="description" content="Tempat Baca Light Novel Gratis — koleksi rapi, update rutin.">
-<meta property="og:title" content="XIII — Light Novel Gratis">
-<meta property="og:description" content="Koleksi rapi, update rutin, tanpa ribet.">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://vazar-xiii.github.io/belajar-html/">
-<meta property="og:image" content="https://vazar-xiii.github.io/belajar-html/img/foto1.png">
-<meta name="twitter:card" content="summary_large_image">
+  <meta property="og:title" content="XIII — Light Novel Gratis">
+  <meta property="og:description" content="Koleksi rapi, update rutin, tanpa ribet.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://vazar-xiii.github.io/belajar-html/">
+  <meta property="og:image" content="https://vazar-xiii.github.io/belajar-html/img/foto1.png">
+  <meta name="twitter:card" content="summary_large_image">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="favicon.ico">
   <title>Beranda — XIII</title>
 
   <!-- CSS EMBED (aman untuk Win7/Chrome lama) -->
