--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+  <link rel="icon" href="favicon.ico">
+
  <title>Beranda — XIII</title>
 
   <!-- CSS EMBED (aman untuk Win7/Chrome lama) -->
