--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="favicon.ico">
-  <link rel="icon" href="/belajar-html/favicon.png" type="image/png">
+  <link rel="icon" href="/belajar-html/favicon-32x32.png" type="image/png" sizes="32x32">
  <title>Beranda — XIII</title>
 
   <!-- CSS EMBED (aman untuk Win7/Chrome lama) -->
