--- a/pages/kontak.html
+++ b/pages/kontak.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="icon" href="/belajar-html/favicon-32x32.png" type="image/png" sizes="32x32">
   <title>kontak</title>
 </head>
 <body>
