--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" href="/belajar-html/favicon-32x32.png" type="image/png" sizes="32x32">
+  <link rel="icon" href="/belajar-html/favicon-16x16.png" type="image/png" sizes="16x16">
+ <link rel="apple-touch-icon" href="/belajar-html/favicon-180.png">
+ <meta name="theme-color" content="#0a66c2">
  <title>Beranda — XIII</title>
 
   <!-- CSS EMBED (aman untuk Win7/Chrome lama) -->
