--- a/index.html
+++ b/index.html
@@ -147,7 +147,12 @@ nav a:hover{ text-decoration:underline; }
     </div>
     <div class="harga-kanan">
       <!-- tabel yang sudah ada -->
-      <table class="tabel-harga"> ... </table>
+      <table class="tabel-harga"> 
+       <tbody>
+          <tr><th scope="row">Produk A</th><td>Elektronik</td><td>Rp 120.000</td><td>Ready</td></tr>
+          <tr><th scope="row">Produk B</th><td>Aksesoris</td><td>Rp 90.000</td><td>Terbatas</td></tr>
+          <tr><th scope="row">Produk C</th><td>Elektronik</td><td>Rp 150.000</td><td>Pre-order</td></tr>
+        </tbody></table>
     </div>
   </div>
 </section>
